--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -53,20 +53,41 @@
     android:textAlignment="textStart"
     android:layout_gravity="start"
     android:layout_marginTop="0dp" />
-
-<Button
+<RelativeLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
-    android:text="Logout"
-    android:textStyle="italic"
-    android:textColor="#666"
-    android:textSize="20sp"
-    android:background="#FFF"
-    android:layout_marginTop="48dp"
-    android:layout_gravity="center"/>
+    android:layout_height="wrap_content">
+    <Button
+            android:id="@+id/profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="48dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:text="Profile"
+            android:textStyle="italic"
+            android:textColor="#666"
+            android:textSize="20sp"
+            android:background="#FFF" />
+
+    <Button
+        android:layout_toRightOf="@+id/profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:text="Logout"
+        android:textStyle="italic"
+        android:textColor="#666"
+        android:textSize="20sp"
+        android:background="#FFF"
+        android:layout_marginTop="36dp" />
+
+</RelativeLayout>
 
 </LinearLayout>
